--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Recipe api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"nodemon"
   },
   "author": "Prince Bassey",
   "license": "ISC",
